# DaRIA

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  README.md  _config.yml  index.md  pyproject.toml
.claude/skills/pr-review/: SKILL.md
.github/workflows/: tests.yml
_layouts/: default.html
assets/css/: style.css
config/: agents.example.yaml
daria/daemon/: agent_runner.py  config.py  daemon.py  ipc.py  irc_transport.py  logger.py  pidfile.py  socket_server.py  supervisor.py  webhook.py
daria/daemon/skill/: irc_client.py
daria/skills/: inspect.py  investigate.py
docs/: logging.md  overview.md  pipeline.md  skills.md
docs/superpowers/plans/: 2026-03-27-daria-phase1.md
docs/superpowers/specs/: 2026-03-27-daria-design.md
skills/daria/: SKILL.md
tests/: conftest.py  test_inspect.py  test_investigate.py  test_logger.py  test_smoke.py
