[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daria"
version = "0.1.0"
description = "Data Refinery Intelligent Agent — the awareness pillar of Organic Development"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ori Nachum" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
investigate = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
